--- a/BDSA/C# - Types & Classes.ipynb
+++ b/BDSA/C# - Types & Classes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -175,19 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "ename": "Unhandled Exception",
-     "evalue": "Arithmetic operation resulted in an overflow.",
+     "ename": "Unhandled exception",
+     "evalue": "Microsoft.CSharp.RuntimeBinder.RuntimeBinderException: Operator '+' cannot be applied to operands of type 'Microsoft.DotNet.Interactive.Formatting.PocketView' and 'int'\r\n   at CallSite.Target(Closure , CallSite , Object , Int32 )\r\n   at System.Dynamic.UpdateDelegates.UpdateAndExecute2[T0,T1,TRet](CallSite site, T0 arg0, T1 arg1)\r\n   at Submission#17.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location where exception was thrown ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
      "output_type": "error",
      "traceback": [
-      "Unhandled Exception",
-      "Arithmetic operation resulted in an overflow.",
-      "   at Submission#28.<<Initialize>>d__0.MoveNext()",
+      "Microsoft.CSharp.RuntimeBinder.RuntimeBinderException: Operator '+' cannot be applied to operands of type 'Microsoft.DotNet.Interactive.Formatting.PocketView' and 'int'\r\n   at CallSite.Target(Closure , CallSite , Object , Int32 )\r\n   at System.Dynamic.UpdateDelegates.UpdateAndExecute2[T0,T1,TRet](CallSite site, T0 arg0, T1 arg1)\r\n   at Submission#17.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location where exception was thrown ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+      "   at CallSite.Target(Closure , CallSite , Object , Int32 )",
+      "   at System.Dynamic.UpdateDelegates.UpdateAndExecute2[T0,T1,TRet](CallSite site, T0 arg0, T1 arg1)",
+      "   at Submission#17.<<Initialize>>d__0.MoveNext()",
       "--- End of stack trace from previous location where exception was thrown ---",
       "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
      ]
@@ -225,8 +226,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Type conversions\n",
-    "\n"
+    "## Type conversions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// implicit up\n",
+    "string myString = \"Hey\";\n",
+    "Object myObject = myString;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// explicit unchecked cast down\n",
+    "Object myObject = \"Hey\";\n",
+    "string myString = (string)myObject;\n",
+    "string anotherString = myObject as string;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "ename": "Unhandled exception",
+     "evalue": "System.InvalidCastException: Unable to cast object of type 'System.Int32' to type 'System.String'.\r\n   at Submission#20.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location where exception was thrown ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "output_type": "error",
+     "traceback": [
+      "System.InvalidCastException: Unable to cast object of type 'System.Int32' to type 'System.String'.\r\n   at Submission#20.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location where exception was thrown ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+      "   at Submission#20.<<Initialize>>d__0.MoveNext()",
+      "--- End of stack trace from previous location where exception was thrown ---",
+      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
+     ]
+    }
+   ],
+   "source": [
+    "// this throws InvalidCastException exceptions, observe\n",
+    "Object myObject = 42;\n",
+    "string myString = (string)myObject;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// this does not throw exceptions, but evaluates to null\n",
+    "Object myObject = 42;\n",
+    "string myString = myObject as string;\n",
+    "WriteLine(myString);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// checked explicit cast with conditional\n",
+    "// this is pure beauty if you are expecting\n",
+    "// casts to fail sometimes\n",
+    "Object myObject = \"Hey\";\n",
+    "if (myObject is string str) WriteLine(str);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###"
    ]
   }
  ],
