--- a/INDBS/Exercises/Exercise_2/DDL_Doodles.ipynb
+++ b/INDBS/Exercises/Exercise_2/DDL_Doodles.ipynb
@@ -53,6 +53,21 @@
             },
             "outputs": [],
             "execution_count": null
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "select  *\n",
+                "from    results \n",
+                "where   result is not null\n",
+                "group by sid \n",
+                "having  count(distinct cid) > 0;"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "43f8b5f0-daca-49d2-8277-2c27ca06029d"
+            },
+            "outputs": [],
+            "execution_count": null
         }
     ]
 }
