--- a/DISYS/Coulouris/Remote Invocation.ipynb
+++ b/DISYS/Coulouris/Remote Invocation.ipynb
@@ -105,7 +105,32 @@
    "source": [
     "RMI but richer\n",
     "- global object identity -> pass by reference for such objects now valid\n",
-    "- directly compatible with OO tooling"
+    "- directly compatible with OO tooling\n",
+    "\n",
+    "keep proxies in client, objects in servers.\n",
+    "\n",
+    "communicate via communication module, pass (method,args,reference) over channel\n",
+    "\n",
+    "inactive objects can be persisted as passive objects, these require an activator.\n",
+    "\n",
+    "clients wishing to obtain an object reference by name of the object can do so via a binder service.\n",
+    "\n",
+    "concurrency is a major concern"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Garbage Collection : \n",
+    "- count-based: keep count of held references\n",
+    "- time-based leases on objects\n",
+    "\n",
+    "tolerates failures : removeRef / addRef are idempotent!\n",
+    "\n",
+    "failed removeRef -> will be removed at end of lease anyway, if retransmitted idempotence guards against side-effects\n",
+    "\n",
+    "failed addRef -> simply invoke removeRef, never incorrect because of idempotence, and if the call did execute it is still correct. again idempotence guards against side-effects of retransmissions."
    ]
   },
   {
